feat: data seeder + implement query in books endpoint
